--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn --no-transfer-progress -B compile --file pom.xml
+        
+      - name: Run Test Suite
+        run: vendor/bin/phpunit
