--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  build_and_test:
+  build_and_test :
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,5 +23,4 @@ jobs:
         run: mvn --no-transfer-progress -B compile --file pom.xml
         
       - name: Run Unit Test
-        id: unit-tests
-        run: yarn test:jest:ci:coverage
+        run: mvn test
