--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,25 +6,14 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  build:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
-
-      - name: Build with Maven
-        # Jim; Just skipping test for now
-        run: mvn --no-transfer-progress -B package -DskipTests --file pom.xml
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }} #Added secrest to github
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}  
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build and push
