--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,13 +7,20 @@ on:
     branches: [ main ]
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to ECR
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Build with Maven
+        # Jim; Just skipping test for now
+        run: mvn --no-transfer-progress -B package -DskipTests --file pom.xml
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}  
+          username: ${{ secrets.DOCKER_HUB_USERNAME }} #Added secrest to github
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build and push
