--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>onlinestore</name>
     <description>Naive implementation of an online store</description>
     <properties>
+        <aws.sdk.version>2.17.292</aws.sdk.version>
         <java.version>11</java.version>
     </properties>
     <dependencies>
@@ -35,6 +36,13 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-cloudwatch2</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>utils</artifactId>
+			<version>${aws.sdk.version}</version>
+		</dependency>
+		
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
