--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -1,12 +1,15 @@
 name: "Terraform CloudWatch"
-defaults:
-  run:
-    working-directory: infra
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+  defaults:
+  run:
+    shell: bash
+    working-directory: ./infra
     
 jobs:
   terraform:
