--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -21,7 +21,7 @@ jobs:
       AWS_REGION: eu-west-1
     steps:
       - name: Checkout
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
