--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan  -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=CANDIDATE_EMAIL" -no-color
+        run: terraform plan  -var="candidate_id=1042" -var="candidate_email=mat-loe@outlook.com" -no-color
         continue-on-error: true
         
       - name: Terraform Plan Status
@@ -43,5 +43,5 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=$CANDIDATE_EMAIL"  -auto-approve
+        run: terraform apply -var="candidate_id=1042" -var="candidate_email=mat-loe@outlook.com"  -auto-approve
         
