--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -35,7 +35,7 @@ jobs:
         id: plan
         if: github.event_name == 'pull_request'
         run: terraform plan  -var="candidate_id=1042" -var="candidate_email=mat-loe@outlook.com" -no-color
-        continue-on-error: true
+        continue-on-error: false
         
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
