--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -16,6 +16,8 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: eu-west-1
+      CANDIDATE_ID: = 1042
+      CANDIDATE_EMAIL: = malo050@student.kristiania.no
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -34,8 +36,8 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan  -var="candidate_id=1042" -var="candidate_email=mat-loe@outlook.com" -no-color
-        continue-on-error: false
+        run: terraform plan  -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=$CANDIDATE_EMAIL" -no-color
+        continue-on-error: true
         
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
@@ -43,5 +45,5 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -var="candidate_id=1042" -var="candidate_email=mat-loe@outlook.com"  -auto-approve
+        run: terraform apply -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=$CANDIDATE_EMAIL"  -auto-approve
         
